--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -51,6 +51,11 @@
         right: -10%;
       
     }
+    .habit-card-container{
+       
+        grid-template-columns: repeat(1 ,1fr);
+       
+    }
     
 }
 @media screen and (min-width: 576px) and (max-width: 992px)  {
@@ -64,5 +69,10 @@
     }
     .banner-container{
         flex-direction: column;
+    }
+    .habit-card-container{
+       
+        grid-template-columns: repeat(2, 1fr);
+       
     }
 };
