--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -75,6 +75,16 @@
     td {
         padding: 10px 20px;
     }
+    .team-img-container{
+       
+        grid-template-columns: repeat(1, 1fr);
+       
+    }
+    .sub-container{
+        
+        grid-template-columns: repeat(1, 1fr);
+       
+    }
    
     
 }
