--- a/styles/style.css
+++ b/styles/style.css
@@ -214,7 +214,7 @@
     margin: 0 auto;
 }
 
-.habit-container h1,
+.habit-container h1, .habit-container
 p {
     text-align: center;
 }
@@ -370,3 +370,85 @@ td {
 
 
 /* bmi section end */
+/* team section start  */
+.team-section{
+    background-color: rgb(0, 0, 0);
+}
+.team-container{
+    width: 68%;
+    margin: 0 auto;
+    padding: 40px 0;
+}
+
+.team-text h2{
+    color: white;
+    font-size: 20px;
+}
+.team-text p{
+    color: rgba(255, 255, 255, 0.5);
+    
+    
+}
+#t-text{
+    text-align: start;
+}
+.team-img-container{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    background-color: rgba(255, 255, 255, 0.1);
+    padding: 18px;
+    border-radius: 10px;
+}
+.t-img img{
+    width: 100%;
+    height: 280px;
+    object-fit: cover;
+    border-radius: 10px;
+   
+}
+.team-img{
+    position: relative;
+    
+}
+.team-text{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    bottom:10%;
+    left: 4%;
+    
+}
+/* team section end  */
+/* footer section start  */
+.footer-section{
+    background: rgba(37, 34, 34, 0.897);
+}
+.footer-container{
+    width: 68%;
+    margin: 0 auto;
+    padding: 40px 0;
+}
+.sub-container{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+}
+.f-child1 h1{
+     color: rgb(230, 83, 60);
+     font-size: 60px;
+     font-weight: 900;
+}
+.f-child2 h1, .f-child3 h1{
+    font-size: 32px;
+    font-weight: 700;
+    color: white;
+}
+.f-child2 ul li, .f-child3 ul li{
+    
+    list-style: none;
+    color: rgba(255, 255, 255, 0.5);
+}
+/* footer section end  */
