--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -85,6 +85,10 @@
         grid-template-columns: repeat(1, 1fr);
        
     }
+    .iframe {
+        width: 100%;
+        height: 100%;
+    }
    
     
 }
@@ -113,8 +117,17 @@
         color: rgba(37, 25, 25, 0.534);
         
     }
+    .team-img-container{
+       
+        grid-template-columns: repeat(2, 1fr);
+       
+    }
     .bmi-child {
         grid-template-columns: repeat(1, 1fr);
         
+    }
+    .iframe {
+        width: 100%;
+        height: 100%;
     }
 };
